# ai-agent-study

./: README.md  pyproject.toml
ch02/: customer_support_agent_evaluation.py  simple_customer_support_agent.py
ch04/: langgraph_mcp_client.py  stock_price_tool_use.py  wikipedia_tool_use.py
ch04/mcp_servers/: MCP_math_server.py  MCP_weather_server.py
ch05/: hierarchical_skill_selection.py  langgraph_example.py  lcel_chain.py  semantic_skill_selection.py
ch05/a2a/: agent_client.py
ch06/: graphrag_test.sh  semantic_memory_langgraph.py  short_term_memory.py
ch07/: direct_preference_optimization.py  experiential_learning.py  reflexion.py  reflexion_trial_learning.py  supervised_fine_tuning.py
ch08/: ray_supply_chain_multi_agent.py  redis_streams_multi_agent_supply_chain.py  supply_chain_logistics_actor_critic.py  supply_chain_logistics_agent.py  supply_chain_logistics_multi_agent.py  temporal_supply_chain_multi_agent.py
ch08/a2a/: agent_server.py
ch08/adas/: arc_prompt.py  arc_test.pkl  arc_val.pkl  automated_design_of_agentic_systems.py  mmlu_prompt.py  sample_mmlu_data.csv  utils.py
ch09/: batch_evaluation.py  memory_evaluation.py  metrics.py
ch09/agents/: customer_support_agent.py  financial_services_agent.py  healthcare_patient_intake_agent.py  it_helpdesk_agent.py  legal_document_review_agent.py  soc_analyst_agent.py  supply_chain_logistics_agent.py
ch10/: distribution_shifts.py
ch11/: optimize_soc_react_agent.py  soc_analyst_agent.py
